# CMake.Template

./: README.md
simplest/Preset/: CMakeLists.txt  main.cpp
